invisible sidebar blocking user's clicking - fix

--- a/src/components/StorePageFinal/Sidebar/Sidebar.css
+++ b/src/components/StorePageFinal/Sidebar/Sidebar.css
@@ -36,7 +36,7 @@
   }
 
   .sidebar {
-    height: 0;
+    max-height: 0px;
     border: none;
     box-shadow: none;
   }
